<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeciesActivity.SpeciesActivity">

    <TextView
        android:id="@+id/speciesTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/speciesName"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/speciesTextSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/speciesTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/speciesSubtitle"
        />

    <TextView
        android:id="@+id/speciesTextDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/speciesTextSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/speciesDescriptionTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/speciesTextVersionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/speciesTextDescriptionTitle"
        app:layout_constraintTop_toBottomOf="@id/speciesTextDescriptionTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/speciesVersionTitle"
        />

    <Spinner
        android:id="@+id/speciesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/speciesTextVersionTitle"
        app:layout_constraintBottom_toBottomOf="@id/speciesTextVersionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="20dp"
        android:text="@string/speciesSubtitle"
        />

    <TextView
        android:id="@+id/speciesTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/speciesTextVersionTitle"
        app:layout_constraintTop_toBottomOf="@id/speciesTextVersionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/desconocido"
        />

    <TextView
        android:id="@+id/speciesTextVarietiesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/speciesTextDescription"
        app:layout_constraintStart_toStartOf="@id/speciesTextDescriptionTitle"
        android:layout_marginTop="20dp"
        android:text="@string/speciesVarietiesTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/speciesRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/speciesTextVarietiesTitle"
        app:layout_constraintStart_toStartOf="@id/speciesTextVarietiesTitle"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/speciesButtonEvolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/speciesButtonEvolution"
        />

</androidx.constraintlayout.widget.ConstraintLayout>